Fixed an issue with div wrapping when zoomed in

--- a/style.css
+++ b/style.css
@@ -428,6 +428,10 @@ hr.rounded {
         max-width: 90%;
         align-self: center;
     }
+
+    .invertedSection{
+        flex-wrap: wrap-reverse;
+    }
 }
 
 @media only screen and (max-width: 1080px){
